# UserManagement

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.db  requirements.txt  ruff_errors.json  ruff_errors.txt  test.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7a2db6d10c2f_initial_commit.py
app/: database.py  main.py
app/core/: config.py  security.py
app/dependencies/: auth.py
app/models/: __init__.py  user.py
app/routers/: admin.py  auth.py  users.py
app/schemas/: __init__.py  user.py
app/services/: user_service.py
tests/: conftest.py  test_admin.py  test_auth.py  test_users.py
